--- a/src/main/resources/advanced.yml
+++ b/src/main/resources/advanced.yml
@@ -96,7 +96,21 @@ Skills:
     Fishing:
         # Shake_UnlockLevel: Fishing level when the Shake ability unlocks
         Shake_UnlockLevel: 150
+        Shake_Chance:
+            Rank_1: 25
+            Rank_2: 40
+            Rank_3: 55
+            Rank_4: 60
+            Rank_5: 75
 
+        # Tiers
+        Tier_Levels:
+            Tier1: 0
+            Tier2: 200
+            Tier3: 400
+            Tier4: 600
+            Tier5: 800
+            
         # MagicHunter_Multiplier: Determines the chance of fishing enchanted items. The chance is calculated by getting the fishing TreasureHunt tier and multiplying it with MagicHunter_Multiplier
         MagicHunter_Multiplier: 5
     #
@@ -148,6 +162,27 @@ Skills:
         # SuperRepair_MaxBonusLevel: On this level, Super Repair chance will be SuperRepair_ChanceMax
         SuperRepair_ChanceMax: 100
         SuperRepair_MaxBonusLevel: 1000
+        
+        Arcane_Forging:
+            May_Lose_Enchants: true
+            Rank_Levels:
+                Rank_1: 100
+                Rank_2: 250
+                Rank_3: 500
+                Rank_4: 750
+        Keep_Enchants:
+            Chance:
+                Rank_4: 40
+                Rank_3: 30
+                Rank_2: 20
+                Rank_1: 10
+        Downgrades:
+             Enabled: true
+             Chance:
+                 Rank_4: 15
+                 Rank_3: 25
+                 Rank_2: 50
+                 Rank_1: 75
     #
     #  Settings for Swords
     ###
