Make purge task run options configurable. Also adds ability to disable the task entirely.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -17,6 +17,10 @@ General:
     #Allow mcMMO to inform other plugins of damage being dealt
     Event_Callback: true
     Power_Level_Cap: 0
+    #Amount of time (in hours) to wait between database purging
+    #To only run at server start, set to 0
+    #To never run, set to -1
+    Purge_Interval: 0
 
 #
 #  Settings for using a mySQL database
