Make the purge task available as a command.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -302,6 +302,8 @@ Commands:
         Enabled: true
     mcc:
         Enabled: true
+    mcpurge:
+        Enabled: true
     mcremove:
         Enabled: true
     mmoedit:
