Added option to disable gaining Acrobatics XP from dodging lightning strikes. Fixes #481

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -102,6 +102,7 @@ Skills:
         Enabled_For_PVP: true
         Enabled_For_PVE: true
         Prevent_AFK_Leveling: true
+        Prevent_Dodge_Lightning: false
         Level_Cap: 0 
     Archery:
         Enabled_For_PVP: true
