FFS Leaderboard rewrites, and new mcrank command.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -301,6 +301,8 @@ Commands:
         Enabled: true
     mctop:
         Enabled: true
+    mcrank:
+        Enabled: true
     xplock:
         Enabled: true
     inspect:
