--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,13 @@
                 </executions>
             </plugin>
         </plugins>
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-file</artifactId>
+                <version>2.2</version>
+            </extension>
+        </extensions>
     </build>
     <repositories>
         <repository>
@@ -135,6 +142,12 @@
 			<scope>test</scope>
 		</dependency>
     </dependencies>
+    <distributionManagement>
+        <repository>
+            <id>mcmmo-repo</id>
+            <url>file:///var/lib/jenkins/repo</url>
+        </repository>
+    </distributionManagement>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
